<resources>
    <string name="app_name">safety</string>
    <string name="underlined_text"><u>Create New Account</u></string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="email">Email:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="dob">DOB:</string>
    <string name="select_date">Select Date</string>
    <string name="back_to_login"><u>If already registered,  Click here</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>
</resources>