<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:background="@drawable/signup_bg"
    app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
    app:layout_constraintStart_toStartOf="@+id/guideline_start"
    app:layout_constraintTop_toBottomOf="@+id/guideline_top"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />

    <!-- Vertical Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:srcCompat="@drawable/iconlogo" />

    <TableLayout

        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/imageView11">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/fname_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/signtext"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/fname_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"

                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/lname_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/signtext"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lname_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"

                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/email_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/signtext"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"

                android:inputType="textEmailAddress" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/mobile_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:textColor="@color/signtext"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/mobile_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"

                android:inputType="phone" />


        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/dob_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:textColor="@color/signtext"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/date_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/select_date"
                android:inputType="none" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/address_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address:"
                android:textColor="@color/signtext"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/address_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"

                android:inputType="textPostalAddress" />

        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/pass_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password:"
                android:textColor="@color/signtext"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/pass_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"

                android:inputType="textPassword" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/confirm_pass_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm Password:"
                android:textColor="@color/signtext"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/confirm_pass_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"

                android:inputType="textPassword" />

        </TableRow>

        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="16dp"-->
        <!--            android:background="@android:color/transparent" />-->
    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_expand_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/SignUpBtn"
        android:text="SignUp"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/back_to_login"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/table_layout" />

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="If already Registered, Click here"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/sign_expand_btn" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />


</androidx.constraintlayout.widget.ConstraintLayout>